--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
+.custom{
+  position: fixed;
+    width: 100%;
+    top: 0px;
+    background: black;
+    z-index: 999;
+    margin-bottom: 40px !important;
+}
 .formContainer {
-    overflow: hidden;
-    border-radius: 0.375rem;
-    border-width: 1px;
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-    padding: 1rem;
-  }
+  overflow: hidden;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding: 1rem;
+ 
+}
   .formTitle {
     margin-top: 0.5rem;
     margin-bottom: 2rem;
